--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,36 @@
-docker build -t udagram-api-feed ./udagram-api-feed
-docker build -t udagram-api-user ./udagram-api-user
-docker build -t udagram-frontend ./udagram-frontend
-docker build -t reverseproxy ./reverseproxy
+language: node_js
+node_js:
+  - 13
 
-docker tag udagram-api-feed sudkul/udagram-api-feed:v1
-docker tag udagram-api-user sudkul/udagram-api-user:v1
-docker tag udagram-frontend sudkul/udagram-frontend:v1
-docker tag reverseproxy sudkul/reverseproxy:v1
+services:
+  - docker
 
-echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-docker push sudkul/udagram-api-feed:v1
-docker push sudkul/udagram-api-user:v1
-docker push sudkul/udagram-frontend:v1
-docker push sudkul/reverseproxy:v1
+# Pre-testing installs
+install:
+  - echo "Cloud Development is tasking, but fun, if you understand it. Author: unknown"
+
+# Scripts to be run such as tests
+before_script:
+  - echo "Whatever I say is false; whatever unknown says, is true. Author: sibling to unknown"
+
+script:
+  - docker --version # print the version for logging
+  - docker build -t udagram-api-feed ./udagram-api-feed
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker build -t udagram-frontend ./udagram-frontend
+  - docker build -t reverseproxy ./reverseproxy
+
+  - docker tag udagram-api-feed occhristian/udagram-api-feed:v1
+  - docker tag udagram-api-user occhristian/udagram-api-user:v1
+  - docker tag udagram-frontend occhristian/udagram-frontend:v1
+  - docker tag reverseproxy occhristian/reverseproxy:v1
+
+
+# Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
+after_success:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push occhristian/udagram-api-feed:v1
+  - docker push occhristian/udagram-api-user:v1
+  - docker push occhristian/udagram-frontend:v1
+  - docker push occhristian/reverseproxy:v1
+
